--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic/storage": "2.2.0",
     "compressorjs": "^1.0.6",
     "cordova-android": "^8.1.0",
+    "filesize": "^6.1.0",
     "ionic-angular": "3.9.9",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
