--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cordova-plugin-telerik-imagepicker": "git+https://github.com/Telerik-Verified-Plugins/ImagePicker.git",
     "cordova-plugin-whitelist": "1.3.3",
     "filesize": "^6.1.0",
+    "heic-convert": "^1.2.2",
     "heic2any": "0.0.3",
     "ionic-angular": "3.9.9",
     "ionicons": "3.0.0",
